--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,16 @@ python = "^3.11"
 aiohttp = "^3.9.5"
 aiosocksy = "^0.1.2"
 structlog = "^24.1.0"
+better-proxy = "^1.1.5"
+aiosqlite = "^0.20.0"
+pyrogram = "^2.0.106"
+tgcrypto = "^1.2.5"
+aiohttp-proxy = "^0.1.2"
+pyuseragents = "^1.0.5"
+tgconvertor = "^0.0.8"
+telethon = "^1.35.0"
+pysocks = "^1.7.1"
+python-socks = {extras = ["asyncio"], version = "^2.4.4"}
 
 
 [build-system]
