--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ tgconvertor = "^0.0.8"
 telethon = "^1.35.0"
 pysocks = "^1.7.1"
 python-socks = {extras = ["asyncio"], version = "^2.4.4"}
+fake-useragent = "^1.5.1"
 
 
 [build-system]
